# Sashank_Aryal_Raytracer_C

./: .gitignore  CMakeLists.txt  ImageOutput.h  License.md  Readme.md  index.html  main.cpp  params.json
Algebra/: Algebra.cpp  Algebra.h  Matrix.cpp  Matrix.h
Camera/: Camera.cpp  Camera.h
Color/: Color.h
Image/: CreateImage.cpp  CreateImage.h
ImageOutputClass/: Color.cpp  Color.h  Image.cpp  Image.h  ImageOutput.cpp  Readme.md  Scene.cpp  Scene.h  Shape.h  Vector.h  main.cpp
ImageOutputClass/Camera/: Camera.cpp  Camera.h
ImageOutputClass/Colour/: Colour.cpp  Colour.h
ImageOutputClass/EasyBMP/: EasyBMP.cpp
ImageOutputClass/Image/: Image.cpp  Image.h
ImageOutputClass/Shape/: Shape.cpp  Shape.h
ImageOutputClass/Vector3D/: Vector3D.cpp  Vector3D.h
Lights/: Light.h
Material/: Material.h  Stripes.h
Point3D/: Point3D.h
Ray/: Ray.h
Scene/: Scene.cpp  Scene.h
Shapes/: Shape.h
Shapes/Box/: Box.cpp  Box.h
Shapes/Disk/: Disk.cpp  Disk.h
Shapes/Plane/: Plane.cpp  Plane.h
Shapes/Sphere/: Sphere.cpp  Sphere.h
Shapes/Triangle/: Triangle.cpp  Triangle.h
Vector3D/: Vector3D.cpp  Vector3D.h
Vector4D/: Vector4D.cpp  Vector4D.h
